[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/objects/door/door.gd" type="Script" id=1]
[ext_resource path="res://assets/images/objects/door.png" type="Texture" id=2]
[ext_resource path="res://scenes/util/stateMachine/stateMachine.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/door/states/door_closed.gd" type="Script" id=4]
[ext_resource path="res://scenes/objects/door/states/door_open.gd" type="Script" id=5]
[ext_resource path="res://scenes/components/detector/radial_detector.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.1465, 26.7063 )

[node name="door" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 2 )
centered = false
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="stateMachine" parent="." instance=ExtResource( 3 )]

[node name="closed" type="Node" parent="stateMachine"]
script = ExtResource( 4 )
is_starting_state = true

[node name="open" type="Node" parent="stateMachine"]
script = ExtResource( 5 )

[node name="collision" type="StaticBody2D" parent="."]
position = Vector2( 32, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
shape = SubResource( 3 )

[node name="radial_detector" parent="." instance=ExtResource( 6 )]
position = Vector2( 31.9929, 30.5943 )
collision_mask = 2
radius = 40

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="radial_detector" to="." method="_on_radial_detector_area_entered"]
[connection signal="area_exited" from="radial_detector" to="." method="_on_radial_detector_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
